# File-Encryption-Tool

./: .gitignore  README.md  pyproject.toml
file_encryption_tool/: cli.py  decrypt.py  decryptor.py  encrypt.py  encryptor.py  key_manager.py
tests/: test_file_encryption.py
