[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "file-encryption-tool"
version = "0.1.0"
description = "A CLI tool to encrypt and decrypt files using Fernet symmetric encryption."
authors = [{name = "Dhruvi Mittal", email = "your-email@example.com"}]
dependencies = ["cryptography"]
